fix(categories): fix color swatch not showing in categories editor

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -431,6 +431,12 @@ svg.cirrusGraph text {
     text-rendering: optimizeLegibility;
 }
 
+/* Ext.ux.colorpick.Field swatch visibility fix */
+.x-colorpicker-field-swatch-inner {
+  z-index: 1
+}
+
+
 /* ColorPaletteOption */
 
 .color {
